--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    Estoy desde UBUNTU 
+    Estoy desde UBUNTU y puedo hacer cambios desde Windows
 </body>
 </html>
